--- a/style.css
+++ b/style.css
@@ -20,3 +20,62 @@
     max-width: 1440px;
     margin: 0 auto;
   }
+
+  a {
+    text-decoration: none;
+  }
+
+  .blue {
+    color: hsl(228, 39%, 23%);
+  }
+
+  /*
+  
+  LANDING PAGE 
+  
+  */
+
+  .lp__nav {
+    padding: 3rem 0 0 0;
+  }
+
+  .btn__get-started {
+    
+    display: inline-block;
+    outline: none;
+    cursor: pointer;
+    font-size: 10px;
+    line-height: 1;
+    border-radius: 500px;
+    transition-property: background-color,border-color,color,box-shadow,filter;
+    transition-duration: .3s;
+    border: 1px solid transparent;
+    letter-spacing: 2px;
+    min-width: 160px;
+    text-transform: uppercase;
+    white-space: normal;
+    font-weight: 700;
+    text-align: center;
+    padding: 14px 12px 16px;
+    color: #fff;
+    background-color: hsl(12, 88%, 59%);
+    height: 42px;
+  }
+  
+  .btn__get-started:hover {
+    background-color: hsl(12, 87%, 70%);
+  }
+
+  .lp__nav {
+    display: flex;
+  }
+
+  .nav__links {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+  }
+
+  .nav__link {
+    padding: 0 1rem;
+  }
